src/snapshots/bevy_state_plugin_generator__stack_parser__tests__parse_node@Name.snap
---
source: src/stack_parser.rs
expression: parse_node(input)
---
Ok(
    (
        "",
        Singleton(
            "Name",
        ),
    ),
)
