src/snapshots/bevy_state_plugin_generator__stack_parser__tests__parse_node@Name_po_A_bo_B,_C_poD_E_boF_Gbcpc_H_bc_I_J_pc.snap
---
source: src/stack_parser.rs
expression: parse_node(input)
---
Ok(
    (
        "",
        List(
            "Name",
            [
                Enum(
                    "A",
                    [
                        Singleton(
                            "B",
                        ),
                        List(
                            "C",
                            [
                                Singleton(
                                    "D",
                                ),
                                Enum(
                                    "E",
                                    [
                                        Singleton(
                                            "F",
                                        ),
                                        Singleton(
                                            "G",
                                        ),
                                    ],
                                ),
                            ],
                        ),
                        Singleton(
                            "H",
                        ),
                    ],
                ),
                Singleton(
                    "I",
                ),
                Singleton(
                    "J",
                ),
            ],
        ),
    ),
)
